Fixed whitespace under navbar & enlarged landing page header

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -45,6 +45,7 @@
   background-image: url("./cvp-bg.jpg");
   background-size: cover;
   padding: 100px 25px;
+  margin-top: -1px;
 }
 
 #content {
@@ -69,13 +70,22 @@
 }
 
 .navbar-brand:hover,
-.nav-link:hover {
+.nav-link:hover,
+.navbar-toggler:hover {
   background: #6c757d;
 }
 
-.navbar-toggler[aria-expanded="true"] + .navbar-collapse ul li a {
+.navbar-toggler:focus {
+  outline: none;
+}
+
+.navbar-toggler + .navbar-collapse ul li a {
   padding-left: 10px;
   padding-right: 10px;
+}
+
+.navbar {
+  padding: 5px;
 }
 
 /* 
